--- a/contact.html
+++ b/contact.html
@@ -4,124 +4,144 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Mutuelle Santé Lobíko na Biso</title>
+    <title>Contact - LTD HEALTH CLUB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .contact-hero-bg {
+            background: linear-gradient(rgba(13, 110, 253, 0.55), rgba(13, 110, 253, 0.55)), url('images/hero_2.jpg') center/cover no-repeat;
+            min-height: 220px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .contact-hero-title {
+            color: #fff;
+            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.18);
+        }
+
+        .form-success {
+            display: none;
+        }
+
+        .form-success.active {
+            display: block;
+        }
+    </style>
 </head>
-<body class="d-flex flex-column min-vh-100">
-    <!-- En-tête compact -->
-    <header>
-        <div class="container py-2">
-            <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
-                <!-- Logo et titre -->
-                <div class="d-flex align-items-center mb-2 mb-md-0">
-                    <img src="images/logo.jpg" alt="Logo" class="logo me-3">
-                    <div class="header-text">
-                        <h1 class="h4 mb-0 text-white">LTD <br>HEALTH CLUB</h1>
-                        <p class="text-white-50 mb-0"><small>Votre santé, Notre priorité</small></p>
-                    </div>
-                </div>
-                <!-- Navigation compacte -->
-                <nav aria-label="Navigation principale" class="mt-2 mt-md-0">
-                    <ul class="list-unstyled d-flex flex-wrap gap-3 mb-0">
-                        <li><a href="index.html" class="text-white text-decoration-none">
-                                <i class="fas fa-home fa-sm me-1"></i>Accueil</a></li>
-                        <li><a href="about.html" class="text-white text-decoration-none">
-                                <i class="fas fa-info-circle fa-sm me-1"></i>À propos</a></li>
-                        <li><a href="services.html" class="text-white text-decoration-none">
-                                <i class="fas fa-hands-helping fa-sm me-1"></i>Services</a></li>
+
+<body class="d-flex flex-column min-vh-100 bg-light">
+
+    <!-- HEADER -->
+    <header class="shadow-sm">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0D6EFD;">
+            <div class="container">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                    <img src="images/logo.jpg" alt="Logo" class="logo me-2" style="height:40px;">
+                    <span class="fw-bold">LTD HEALTH CLUB</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mainNav">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a href="index.html" class="nav-link"><i
+                                    class="fas fa-home fa-sm me-1"></i>Accueil</a></li>
+                        <li class="nav-item"><a href="about.html" class="nav-link"><i
+                                    class="fas fa-info-circle me-1"></i>À propos</a></li>
+                        <li class="nav-item"><a href="services.html" class="nav-link"><i
+                                    class="fas fa-hands-helping me-1"></i>Nos Services</a></li>
                     </ul>
-                </nav>
+                </div>
             </div>
-        </div>
+        </nav>
     </header>
 
-    <!-- Contenu principal -->
-    <main class="flex-grow-1 py-4 bg-light">
-        <section id="contact" class="container py-4">
+    <!-- HERO CONTACT -->
+    <section class="contact-hero-bg mb-5">
+        <div class="container text-center">
+            <h1 class="display-5 fw-bold contact-hero-title mb-2">Contactez-nous</h1>
+            <p class="lead text-white mb-0">Une question ? Un besoin ? Notre équipe vous répond rapidement.</p>
+        </div>
+    </section>
+
+    <!-- CONTENU PRINCIPAL -->
+    <main class="flex-grow-1">
+        <section class="container py-4">
             <div class="row g-4">
                 <!-- Formulaire de contact -->
                 <div class="col-lg-6">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm border-0 h-100">
                         <div class="card-body">
-                            <h2 class="h4 mb-3 text-primary"><i class="fas fa-envelope me-2"></i>Nous contacter</h2>
-                            <p class="mb-4">Pour toute question ou demande d'information, utilisez notre formulaire :
-                            </p>
-
-                            <form action="submit_form.php" method="post" class="needs-validation" novalidate>
+                            <h2 class="h4 mb-3 text-primary"><i class="fas fa-envelope me-2"></i>Formulaire rapide</h2>
+                            <form action="https://formspree.io/f/VOUS_REMPLACEREZ_PAR_VOTRE_ID" method="POST"
+                                class="needs-validation" novalidate id="contactForm">
                                 <div class="mb-3">
                                     <label for="name" class="form-label">Nom complet</label>
                                     <input type="text" class="form-control" id="name" name="name" required>
                                     <div class="invalid-feedback">Veuillez saisir votre nom</div>
                                 </div>
-
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Email</label>
                                     <input type="email" class="form-control" id="email" name="email" required>
                                     <div class="invalid-feedback">Veuillez saisir un email valide</div>
                                 </div>
-
                                 <div class="mb-3">
                                     <label for="message" class="form-label">Message</label>
                                     <textarea class="form-control" id="message" name="message" rows="4"
                                         required></textarea>
                                     <div class="invalid-feedback">Veuillez saisir votre message</div>
                                 </div>
-
                                 <button type="submit" class="btn btn-primary w-100 py-2">
                                     <i class="fas fa-paper-plane me-2"></i>Envoyer
                                 </button>
+                                <div class="alert alert-success mt-3 form-success" id="formSuccess">
+                                    <i class="fas fa-check-circle me-2"></i>Votre message a bien été envoyé. Merci !
+                                </div>
                             </form>
                         </div>
                     </div>
                 </div>
-
                 <!-- Informations de contact -->
                 <div class="col-lg-6">
-                    <div class="card shadow-sm h-100">
+                    <div class="card shadow-sm border-0 h-100">
                         <div class="card-body">
                             <h2 class="h4 mb-3 text-primary"><i class="fas fa-address-book me-2"></i>Coordonnées</h2>
                             <ul class="list-unstyled vstack gap-3 mb-4">
                                 <li>
                                     <i class="fas fa-phone me-2 text-primary"></i>
                                     <strong>Téléphone :</strong><br>
-                                    <a href="tel:+33123456789">01 23 45 67 89</a>
+                                    <a href="tel:+243819975194" class="text-decoration-none">+243 819 975 194</a>
                                 </li>
                                 <li>
                                     <i class="fas fa-envelope me-2 text-primary"></i>
                                     <strong>Email :</strong><br>
-                                    <a href="mailto:contact@mutuelle-lobiko.fr">contact@mutuelle-lobiko.fr</a>
+                                    <a href="mailto:LtdHealthClub10@gmail.com"
+                                        class="text-decoration-none">LtdHealthClub10@gmail.com</a>
                                 </li>
                                 <li>
                                     <i class="fas fa-map-marker-alt me-2 text-primary"></i>
                                     <strong>Adresse :</strong><br>
-                                    123 rue de la Santé, 75000 Paris
+                                    Avenue lotis n°15, Kinshasa
                                 </li>
                             </ul>
                             <hr>
                             <p class="text-muted mb-3"><i class="fas fa-clock me-2"></i>Ouvert du lundi au vendredi, de
-                                9h à 17h</p>
-
+                                9h à 17h
+                            </p>
                             <h3 class="h5 mt-4 mb-3 text-primary"><i class="fas fa-share-alt me-2"></i>Réseaux sociaux
                             </h3>
                             <div class="d-flex gap-3">
-                                <a href="https://www.facebook.com/mutuellelobiko" class="btn btn-outline-primary btn-sm"
-                                    target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="https://twitter.com/mutuellelobiko" class="btn btn-outline-primary btn-sm"
-                                    target="_blank">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="https://www.instagram.com/mutuellelobiko"
-                                    class="btn btn-outline-primary btn-sm" target="_blank">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                                <a href="https://www.linkedin.com/company/mutuellelobiko"
-                                    class="btn btn-outline-primary btn-sm" target="_blank">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
+                                <a href="https://facebook.com/LtdHealthClub10" class="btn btn-outline-primary btn-sm"
+                                    target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://twitter.com/LtdHealthClub10" class="btn btn-outline-primary btn-sm"
+                                    target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.instagram.com/" class="btn btn-outline-primary btn-sm"
+                                    target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="https://linkedin.com/" class="btn btn-outline-primary btn-sm"
+                                    target="_blank"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -130,23 +150,26 @@
         </section>
     </main>
 
-    <!-- Pied de page -->
+    <!-- FOOTER -->
     <footer class="bg-dark text-white mt-auto py-4">
         <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <p class="mb-1">&copy; 2025 Mutuelle de santé Lobíko na Biso. Tous droits réservés.</p>
+            <div class="row align-items-center">
+                <div class="col-md-8" texte-center>
+                    <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
                     <p class="text-white-50 mb-0"><small>
-                            Quartier Ngomba-Kinkusa, avenue équateur numéro 15 -
-                            Téléphone : +243 819 975 194 -
-                            Email : <a href="mailto:lobikonabiso@gmail.com"
-                                class="text-white-50">lobikonabiso@gmail.com</a>
+                            Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
+                                641 927</a> -
+                            Email : <a href="mailto:ksksamuelkis@gmail.com"
+                                class="text-white-50 text-decoration-none">ksksamuelkis@gmail.com</a>
                         </small></p>
                 </div>
                 <div class="col-md-4 text-md-end mt-3 mt-md-0">
-                    <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://facebook.com/LtdHealthClub10" class="text-white me-3" target="_blank"
+                        rel="noopener"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/LtdHealthClub10" class="text-white me-3" target="_blank"
+                        rel="noopener"><i class="fab fa-twitter"></i></a>
+                    <a href="https://linkedin.com/" class="text-white" target="_blank" rel="noopener"><i
+                            class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
@@ -154,18 +177,26 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Validation du formulaire
+        // Validation du formulaire et affichage du message de succès
         (() => {
             'use strict'
             const forms = document.querySelectorAll('.needs-validation')
-
-            Array.from(forms).forEach(form => {
-                form.addEventListener('submit', event => {
-                    if (!form.checkValidity()) {
+            const form = document.getElementById('contactForm');
+            const formSuccess = document.getElementById('formSuccess');
+            Array.from(forms).forEach(formEl => {
+                formEl.addEventListener('submit', event => {
+                    if (!formEl.checkValidity()) {
                         event.preventDefault()
                         event.stopPropagation()
+                    } else {
+                        // Affiche le message de succès sans recharger la page
+                        event.preventDefault();
+                        formSuccess.classList.add('active');
+                        formEl.reset();
+                        formEl.classList.remove('was-validated');
+                        setTimeout(() => formSuccess.classList.remove('active'), 5000);
                     }
-                    form.classList.add('was-validated')
+                    formEl.classList.add('was-validated')
                 }, false)
             })
         })()
