--- a/services.html
+++ b/services.html
@@ -105,7 +105,7 @@
                                     <div class="icon-wrapper mb-3">
                                         <i class="fas fa-stethoscope text-primary fa-3x"></i>
                                     </div>
-                                    <img src="images/people.jpg" alt="Soins courants"
+                                    <img src="images/People.jpg" alt="Soins courants"
                                         class="img-fluid rounded-4 shadow mb-3"
                                         style="max-height:120px; object-fit:cover;">
                                     <h3 class="h5 mb-3">Soins courants</h3>
@@ -145,7 +145,7 @@
                                     <div class="icon-wrapper mb-3">
                                         <i class="fas fa-heartbeat text-primary fa-3x"></i>
                                     </div>
-                                    <img src="images/prevention.jpg" alt="Prévention"
+                                    <img src="images/Prevention.jpg" alt="Prévention"
                                         class="img-fluid rounded-4 shadow mb-3"
                                         style="max-height:120px; object-fit:cover;">
                                     <h3 class="h5 mb-3">Prévention</h3>
