index et images booste

--- a/index.html
+++ b/index.html
@@ -47,17 +47,33 @@
             <p class="lead mb-4 fade-in-up">Une mutuelle de proximité, humaine et accessible à tous. Des
                 garanties
                 adaptées, un accompagnement personnalisé et des remboursements rapides.</p>
-            <p class="lead mb-4 fade-in-up">LTD HEALTH CLUB interroge pour vous les partenaires qui correspondent à vos
-                besoins de couverture Santé
-                Choisir une mutuelle santé, c'est trouver l'équilibre entre vos cotisations mensuelles, vos
-                remboursements de soins de
-                santé et le reste à charge. Le comparateur de LTD HEALTH CLUB sélectionne pour vous les centres et
-                cliniques adaptés à votre profil.</p>
             <a href="contact.html" class="btn btn-primary btn-lg px-4 fade-in-up"><i
                     class="fas fa-user-plus me-2"></i>Demander un devis
             </a>
         </div>
+
     </section>
+
+    <!-- Message d'information LTD HEALTH CLUB -->
+    <div class="container my-4">
+        <div class="bg-white rounded-4 shadow p-4 mx-auto d-flex flex-column flex-md-row align-items-center"
+            style="max-width: 900px;">
+            <div class="mb-3 mb-md-0 me-md-4 flex-shrink-0 text-center">
+                <img src="images/booste.jpg" alt="Booster votre santé" class="img-fluid rounded-4 shadow"
+                    style="max-width: 160px; max-height: 120px; object-fit: cover;">
+            </div>
+            <div>
+                <p class="lead mb-0 text-center text-md-start fade-in-up">
+                    LTD HEALTH CLUB interroge pour vous les partenaires qui correspondent à vos
+                    besoins de couverture Santé.<br>
+                    Choisir une mutuelle santé, c'est trouver l'équilibre entre vos cotisations mensuelles, vos
+                    remboursements de soins de santé et le reste à charge.<br>
+                    Le comparateur de LTD HEALTH CLUB sélectionne pour vous les centres et
+                    cliniques adaptés à votre profil.
+                </p>
+            </div>
+        </div>
+    </div>
 
     <!-- GARANTIES / SERVICES -->
     <section class="py-5">
