ajout demander service

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 
     <!-- Message d'information LTD HEALTH CLUB -->
     <div class="container my-4">
-        <div class="bg-white rounded-4 shadow p-4 mx-auto d-flex flex-column flex-md-row align-items-center"
+        <div class="bg-white rounded-4 shadow p-4 mx-auto d-flex flex-column flex-md-row align-items-center justify-content-center"
             style="max-width: 900px;">
             <div class="mb-3 mb-md-0 me-md-4 flex-shrink-0 text-center">
                 <img src="images/booste.jpg" alt="Booster votre santé" class="img-fluid rounded-4 shadow"
                     style="max-width: 160px; max-height: 120px; object-fit: cover;">
             </div>
-            <div>
-                <p class="lead mb-0 text-center text-md-start fade-in-up">
+            <div class="w-100">
+                <p class="lead mb-4 text-center fade-in-up">
                     LTD HEALTH CLUB interroge pour vous les partenaires qui correspondent à vos
                     besoins de couverture Santé.<br>
                     Choisir une mutuelle santé, c'est trouver l'équilibre entre vos cotisations mensuelles, vos
@@ -71,6 +71,13 @@
                     Le comparateur de LTD HEALTH CLUB sélectionne pour vous les centres et
                     cliniques adaptés à votre profil.
                 </p>
+                <div class="d-flex justify-content-center">
+                    <a href="services.html"
+                        class="btn btn-primary btn-lg d-inline-flex align-items-center gap-2 shadow fade-in-up px-4 py-2 rounded-pill">
+                        <i class="fas fa-concierge-bell fa-lg"></i>
+                        <span>Demander un service</span>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
