--- a/about.html
+++ b/about.html
@@ -29,8 +29,11 @@
                         <li class="nav-item"><a href="services.html" class="nav-link"><i
                                     class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
                         </li>
+                        <li class="nav-item"><a href="about.html" class="nav-link"><i
+                                    class="fas fa-info-circle me-1"></i><span class="fw-bold">À propos</span></a></li>
+
                         <li class="nav-item"><a href="contact.html" class="nav-link"><i
-                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contact</span></a>
+                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
                         </li>
                     </ul>
                 </div>
