--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-  
+
 </head>
 
 <body class="d-flex flex-column min-vh-100 bg-light">
@@ -27,11 +27,16 @@
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a href="index.html" class="nav-link"><i
-                                    class="fas fa-home fa-sm me-1"></i>Accueil</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link"><i
-                                    class="fas fa-info-circle me-1"></i>À propos</a></li>
+                                    class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
                         <li class="nav-item"><a href="services.html" class="nav-link"><i
-                                    class="fas fa-hands-helping me-1"></i>Nos Services</a></li>
+                                    class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
+                        </li>
+                        <li class="nav-item"><a href="about.html" class="nav-link"><i
+                                    class="fas fa-info-circle me-1"></i><span class="fw-bold">À propos</span></a></li>
+
+                        <li class="nav-item"><a href="contact.html" class="nav-link"><i
+                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
+                        </li>
                     </ul>
                 </div>
             </div>
