--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
                 </button>
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a href="about.html" class="nav-link"><i
-                                    class="fas fa-info-circle me-1"></i><span class="fw-bold">À propos</span></a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link"><i
+                                    class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
                         <li class="nav-item"><a href="services.html" class="nav-link"><i
                                     class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
                         </li>
+                        <li class="nav-item"><a href="about.html" class="nav-link"><i
+                                    class="fas fa-info-circle me-1"></i><span class="fw-bold">À propos</span></a></li>
+
                         <li class="nav-item"><a href="contact.html" class="nav-link"><i
-                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contact</span></a>
+                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
                         </li>
                     </ul>
                 </div>
@@ -64,18 +67,20 @@
             </div>
             <div class="w-100">
                 <p class="lead mb-4 text-center fade-in-up">
-                    LTD HEALTH CLUB interroge pour vous les partenaires qui correspondent à vos
-                    besoins de couverture Santé.<br>
-                    Choisir une mutuelle santé, c'est trouver l'équilibre entre vos cotisations mensuelles, vos
-                    remboursements de soins de santé et le reste à charge.<br>
-                    Le comparateur de LTD HEALTH CLUB sélectionne pour vous les centres et
-                    cliniques adaptés à votre profil.
+                    LTD HEALTH CLUB interroge pour vous les partenaires les plus adaptés à vos besoins de couverture
+                    santé.<br>
+                    Choisir une mutuelle de santé, c’est trouver le juste équilibre entre vos cotisations mensuelles,
+                    vos économies, et
+                    votre tranquillité d’esprit face aux imprévus de la vie.<br>
+                    Le comparateur de LTD HEALTH CLUB sélectionne pour vous des centres et cliniques adaptés à votre
+                    profil, à des prix très
+                    raisonnables.
                 </p>
                 <div class="d-flex justify-content-center">
                     <a href="services.html"
                         class="btn btn-primary btn-lg d-inline-flex align-items-center gap-2 shadow fade-in-up px-4 py-2 rounded-pill">
                         <i class="fas fa-concierge-bell fa-lg"></i>
-                        <span>Demander un service</span>
+                        <span>Trouver un service ?</span>
                     </a>
                 </div>
             </div>
@@ -114,10 +119,48 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-4 fade-in-up">
+                    <div class="card h-100 text-center border-0 shadow-sm">
+                        <div class="card-body">
+                            <i class="fas fa-baby fa-2x text-primary mb-3"></i>
+                            <h5 class="card-title">Pédiatrie</h5>
+                            <p class="card-text">Vos enfants méritent un accompagnement médical bienveillant et adapté à
+                                leurs besoins.
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <!-- Ajoute d'autres garanties si besoin -->
             </div>
         </div>
     </section>
+
+    <!-- Bloc attractif LTD HEALTH CLUB -->
+    <div class="container my-5">
+        <div class="bg-white rounded-4 shadow p-4 mx-auto d-flex flex-column flex-md-row align-items-center justify-content-center"
+            style="max-width: 900px;">
+            <div class="mb-3 mb-md-0 me-md-4 flex-shrink-0 text-center">
+                <img src="images/booste.jpg" alt="Booster votre santé" class="img-fluid rounded-4 shadow"
+                    style="max-width: 160px; max-height: 120px; object-fit: cover;">
+            </div>
+            <div class="w-100">
+                <p class="lead mb-4 text-center fade-in-up">
+                    Vous cherchez une clinique adaptée à vos besoins, mais vous ne savez pas par où commencer ?<br>
+                    Vous en avez assez de comparer sans trouver l’option idéale pour votre santé et votre budget ?<br>
+                    Et si la solution était plus proche que vous ne le pensiez ?<br><br>
+                    <strong>Avec LTD HEALTH CLUB, trouvez enfin des partenaires fiables, accessibles et sur
+                        mesure.</strong>
+                </p>
+                <div class="d-flex justify-content-center">
+                    <a href="about.html"
+                        class="btn btn-primary btn-lg d-inline-flex align-items-center gap-2 shadow fade-in-up px-4 py-2 rounded-pill">
+                        <i class="fas fa-concierge-bell fa-lg"></i>
+                        <span>Qui sommes-nous ?</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- CONTACT RAPIDE -->
     <section class="contact-rapide-section bg-primary text-white py-5 position-relative">
