--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nos services - Mutuelle de Santé Lobíko na Biso</title>
+    <title>Nos services- Mutuelle de Santé LTD HEALTH CLUB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -49,12 +49,15 @@
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a href="index.html" class="nav-link"><i
-                                    class="fas fa-home fa-sm me-1"></i>Accueil</a></li>
+                                    class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
+                        <li class="nav-item"><a href="services.html" class="nav-link"><i
+                                    class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
+                        </li>
                         <li class="nav-item"><a href="about.html" class="nav-link"><i
                                     class="fas fa-info-circle me-1"></i><span class="fw-bold">À propos</span></a></li>
 
                         <li class="nav-item"><a href="contact.html" class="nav-link"><i
-                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contact</span></a>
+                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
                         </li>
                     </ul>
                 </div>
