--- a/about.html
+++ b/about.html
@@ -198,7 +198,8 @@
                                 </div>
                             </div>
                             <div class="mt-4 text-center position-relative z-1">
-                                <p class="lead">Nous sommes convaincus que la santé est un droit fondamental.</p>
+                                <p class="lead fw-bold text-black mb-3">Nous sommes convaincus que la santé est un
+                                    droit fondamental.</p>
                                 <a href="contact.html" class="btn btn-primary px-4 py-2">
                                     <i class="fas fa-user-plus me-2"></i>Rejoignez-nous
                                 </a>
