pages index ajouts photos icone et fin

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="bg-white rounded-4 shadow p-4 mx-auto d-flex flex-column flex-md-row align-items-center justify-content-center"
             style="max-width: 900px;">
             <div class="mb-3 mb-md-0 me-md-4 flex-shrink-0 text-center">
-                <img src="images/icone" alt="Booster votre santé" class="img-fluid rounded-4 shadow"
+                <img src="images/icones.jpg" alt="Booster votre santé" class="img-fluid rounded-4 shadow"
                     style="max-width: 160px; max-height: 120px; object-fit: cover;">
             </div>
             <div class="w-100">
