nouvelle adresse physique

--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                                 <li>
                                     <i class="fas fa-phone me-2 text-primary"></i>
                                     <strong>Téléphone :</strong><br>
-                                    <a href="tel:+243819975194" class="text-decoration-none">+243 819 975 194</a>
+                                    <a href="tel:+243988212191" class="text-decoration-none">+243 988 212 191</a>
                                 </li>
                                 <li>
                                     <i class="fas fa-envelope me-2 text-primary"></i>
@@ -108,7 +108,7 @@
                                 <li>
                                     <i class="fas fa-map-marker-alt me-2 text-primary"></i>
                                     <strong>Adresse :</strong><br>
-                                    Avenue lotis n°15, Kinshasa
+                                    Avenue Kintambo n°15/Binza Delvaux, Kinshasa
                                 </li>
                             </ul>
                             <hr>
