--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                                                 class="fas fa-phone fa-lg"></i></span>
                                         <div>
                                             <strong>Téléphone :</strong><br>
-                                            <a href="tel:+243819975194" class="text-decoration-none text-dark">+243 819
-                                                975 194</a>
+                                            <a href="tel:+243988212191" class="text-decoration-none text-dark">+243 988
+                                                212 191</a>
                                         </div>
                                     </li>
                                     <li class="d-flex align-items-center">
@@ -199,7 +199,7 @@
                                                 class="fas fa-map-marker-alt fa-lg"></i></span>
                                         <div>
                                             <strong>Adresse :</strong><br>
-                                            Avenue lotis n°15
+                                            Avenue Kintambo n°15/Binza Delvaux, Kinshasa
                                         </div>
                                     </li>
                                 </ul>
