--- a/about.html
+++ b/about.html
@@ -182,8 +182,8 @@
                                 <div class="col-md-6">
                                     <div class="bg-light p-3 rounded h-100 mb-3 mb-md-0">
                                         <ul class="list-unstyled">
-                                            <li class="mb-2"><i
-                                                    class="fas fa-check-circle text-primary me-2"></i>Promotion de la
+                                            <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"
+                                                    aria-hidden="true"></i>Promotion de la
                                                 prévention</li>
                                             <li class="mb-2"><i
                                                     class="fas fa-check-circle text-primary me-2"></i>Partenariats
@@ -215,7 +215,7 @@
     <footer class="bg-dark text-white mt-auto py-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-8" texte-center>
+                <div class="col-md-8 text-center">
                     <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
                     <p class="text-white-50 mb-0"><small>
                             Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
