--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,8 @@
                     <div class="card shadow-sm border-0 h-100">
                         <div class="card-body">
                             <h2 class="h4 mb-3 text-primary"><i class="fas fa-envelope me-2"></i>Formulaire rapide</h2>
-                            <form action="https://formspree.io/f/VOUS_REMPLACEREZ_PAR_VOTRE_ID" method="POST"
-                                class="needs-validation" novalidate id="contactForm">
+                            <form action="https://formspree.io/f/meozqgpl" method="POST" class="needs-validation"
+                                novalidate id="contactForm">
                                 <div class="mb-3">
                                     <label for="name" class="form-label">Nom complet</label>
                                     <input type="text" class="form-control" id="name" name="name" required>
@@ -138,7 +138,7 @@
     <footer class="bg-dark text-white mt-auto py-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-8" texte-center>
+                <div class="col-md-8 text-center">
                     <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
                     <p class="text-white-50 mb-0"><small>
                             Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
@@ -161,30 +161,18 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Validation du formulaire et affichage du message de succès
-        (() => {
-            'use strict'
-            const forms = document.querySelectorAll('.needs-validation')
-            const form = document.getElementById('contactForm');
-            const formSuccess = document.getElementById('formSuccess');
-            Array.from(forms).forEach(formEl => {
-                formEl.addEventListener('submit', event => {
-                    if (!formEl.checkValidity()) {
-                        event.preventDefault()
-                        event.stopPropagation()
-                    } else {
-                        // Affiche le message de succès sans recharger la page
-                        event.preventDefault();
-                        formSuccess.classList.add('active');
-                        formEl.reset();
-                        formEl.classList.remove('was-validated');
-                        setTimeout(() => formSuccess.classList.remove('active'), 5000);
-                    }
-                    formEl.classList.add('was-validated')
-                }, false)
-            })
-        })()
+        document.getElementById("contactForm").addEventListener("submit", function (event) {
+            event.preventDefault(); // éviter soumission immédiate
+            const success = document.getElementById("formSuccess");
+            success.style.display = "block";
+            setTimeout(() => {
+                success.style.display = "none";
+                event.target.submit(); // maintenant on envoie le formulaire
+            }, 3000);
+        });
     </script>
+
+
 </body>
 
 </html>
