--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+        content="LTD Health Club : mutuelle de santé humaine, accessible et adaptée à vos besoins à Kinshasa. Demandez un devis rapidement.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Mutuelle Santé LTD HEALTH CLUB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -235,7 +238,7 @@
     <footer class="bg-dark text-white mt-auto py-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-8" texte-center>
+                <div class="col-md-8 text-center">
                     <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
                     <p class="text-white-50 mb-0"><small>
                             Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
