--- a/services.html
+++ b/services.html
@@ -229,7 +229,7 @@
     <footer class="bg-dark text-white mt-auto py-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-8" texte-center>
+                <div class="col-md-8 text-center">
                     <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
                     <p class="text-white-50 mb-0"><small>
                             Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
